--- a/starter/app/src/debug/res/values/google_maps.xml
+++ b/starter/app/src/debug/res/values/google_maps.xml
@@ -1,4 +1,4 @@
 <resources>
     <!--    TODO: Before you run your application, you need a Google Maps API key.-->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDF5n80KQqGDx3QYqoQkaQV9sgFcZMCJzA</string>
 </resources>
